Fix home page broken in mobile

--- a/src/components/home/home.sass
+++ b/src/components/home/home.sass
@@ -11,5 +11,5 @@
       padding: 1.5rem
       margin: 0 -16px
       @media screen and (max-width: 599px)
-        margin: 0 -24px
+        margin: 0
 
