--- a/src/components/home/jumbotron.sass
+++ b/src/components/home/jumbotron.sass
@@ -7,7 +7,7 @@
   height: 500px
   margin: -16px -16px 0
   @media screen and (max-width: 599px)
-    margin: -24px -24px 0
+    margin: -24px 0 0
 
   .content
     display: flex
